
	* added missing description to module menu, credits Steffen Kamper
	* fixed module menu toggling

2008-01-24  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature: Various enhancements to link dialogues in htmlArea RTE
	* Fixed bug #6787: classesAnchor and classesLinks get lost when changing tab in link browser
	* Added feature #4100: Insert/Modify Link with DAM

2008-01-23  Ingo Renner  <ingo@typo3.org>

	* fixed bugs #7251 , #6524: Make the folding/unfolding of the menu items use AJAX, credits Steffen Kamper

2008-01-23	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Bugfix: removed a needless comma in sysext/cms/ext_tables.sql (line 160)
	* Installer: Improved the installer module.
		- The result of the previous steps is now displayed
		- Fixed some issues with "previous" button
	* Installer: Improved database and table creation
	* Installer: added new option BE/RTE_imageStorageDir. related to issue #7185
	* Installer: Added some styles for deliverable lists

2008-01-22	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Installer: Added a "hide" button to hide the results of executed methods
	* Installer: Added skeletons for gfx check methods
	* Installer: improved the look of the login screen
	* Installer: Smaller bugfixes and enhancements in error handling

2008-01-22  Ingo Renner  <ingo@typo3.org>

	* added feature: #7223: update prototype and scriptaculous to their most recent versions
	* fixed bug: #7237: There is no way to get loaded interface
	* fixed bug: #7238: t3editor should not depend on MochiKit-Javascript-Framework

2008-01-21  Benjamin Mack  <mack@xnos.org>

	* Fixed #7166: CSH broken in EM, Info View (Thanks to Francois Suter)

2008-01-21  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed JS error when opening the TYPO3 image browser and proc.plainImageMode is not set

2008-01-21  Ingo Renner  <ingo@typo3.org>

	* fixed tab borders in TCEforms
	* now the module menu in backend.php is as wide as in alt_main.php
